added localization feature

--- a/app.json
+++ b/app.json
@@ -51,7 +51,10 @@
             "path": "app.js",
             "bundle": true,  /* Indicates that all class dependencies are concatenated into this file when build */
             "update": "delta"
-        }
+        },
+        {
+	    "path": "app/locale/Messages.js"
+	}
     ],
 
     /**
